# fastapi

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: config.md
docs/api/: builder.md  main.md
docs/api/routes/: score_router.md
docs/domain/entities/: base_entity.md  score.md
docs/infrastructure/adapters/: postgres_adapter.md
docs/infrastructure/mapping/: score_table.md
docs/infrastructure/models/: score_model.md
docs/infrastructure/repositories/score/: add_score_repository.md  delete_score_repository.md  get_all_score_repository.md  get_score_repository.md  patch_score_repository.md  put_score_repository.md
pyservice/: config.py  config.yaml
pyservice/api/: builder.py  main.py
pyservice/api/routes/: score_router.py  submit_scores.py
pyservice/api/utils/: service_bootstrapper.py  service_switcher.py  services.py
pyservice/domain/entities/: base_entity.py  score.py
pyservice/infrastructure/adapters/: postgres_adapter.py
pyservice/infrastructure/mapping/: score_table.py
pyservice/infrastructure/models/: score_model.py
pyservice/infrastructure/repositories/: add_score_repository.py
terraform/: main.tf  policy.tf
terraform/alicloud/service/: main.tf
terraform/aws/storage/: main.tf
terraform/azure/service/: main.tf
terraform/gcp/storage/: main.tf
terraform/oracle/storage/: main.tf
tests/: doc.md  test.py
tests/domain/entities/: base_entity_test.py  score_entity_test.py
tests/unit-tests/: config.py  doc.md  test.py
tests/unit-tests/api/: builder.py
tests/unit-tests/domain/entities/: base_entity.py  (+1 more)
(+15 files in other folders)
