[tool.poetry]
name = "pyservice"
version = "0.1.0"
description = ""
authors = ["Vinicius Morgado <34577818+viniciusmorgado@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
