[tool.poetry]
name = "pyservice"
version = "0.1.0"
description = ""
authors = ["Vinicius Morgado <34577818+viniciusmorgado@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
pydantic = "^2.9.1"
pandas = "^2.2.2"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
redis = "^5.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
